fixed overflow issue

--- a/style/style.css
+++ b/style/style.css
@@ -33,8 +33,6 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
-  height: 200px;
-  line-height: 160px;
   width: 40%;
   padding: 20px;
   text-align: center;
